--- a/package.json
+++ b/package.json
@@ -4,14 +4,24 @@
   "description": "Backend for Coach y Média V2 - Bun + TypeScript + MongoDB",
   "main": "index.ts",
   "scripts": {
-    "dev": "bun run index.ts",
-    "build": "bun build index.ts",
-    "start": "bun run build/index.js"
+    "dev": "bun run server.ts",
+    "build": "bun build server.ts --target bun",
+    "start": "bun run build/server.js",
+    "seed": "bun run seed.ts"
   },
   "dependencies": {
+    "@types/bcryptjs": "^3.0.0",
+    "@types/express": "^5.0.6",
+    "@types/jsonwebtoken": "^9.0.10",
+    "bcryptjs": "^3.0.3",
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
+    "express": "^5.2.1",
+    "helmet": "^8.1.0",
+    "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.0.0",
-    "zod": "^4.1.13",
-    "dotenv": "^17.2.3"
+    "morgan": "^1.10.1",
+    "zod": "^4.1.13"
   },
   "devDependencies": {
     "@types/node": "^24.10.1",
