--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "zod": "^4.2.1"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.19",
+    "@types/morgan": "^1.9.10",
     "@types/node": "^24.10.4",
     "typescript": "^5.9.3"
   }
