--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "seed": "bun run seed.ts"
   },
   "dependencies": {
+    "@getbrevo/brevo": "^3.0.1",
     "@types/bcryptjs": "^3.0.0",
     "@types/express": "^5.0.6",
     "@types/jsonwebtoken": "^9.0.10",
