--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.0.2",
     "morgan": "^1.10.1",
+    "socket.io": "^4.8.1",
     "zod": "^4.2.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
     "@types/morgan": "^1.9.10",
     "@types/node": "^24.10.4",
+    "@types/socket.io": "^3.0.2",
     "typescript": "^5.9.3"
   }
 }
