feat: Add pdf instead of JSON for certificate generation

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.0.2",
     "morgan": "^1.10.1",
+    "pdfkit": "^0.17.2",
     "socket.io": "^4.8.1",
     "zod": "^4.2.1"
   },
@@ -30,6 +31,7 @@
     "@types/cors": "^2.8.19",
     "@types/morgan": "^1.9.10",
     "@types/node": "^24.10.4",
+    "@types/pdfkit": "^0.17.4",
     "@types/socket.io": "^3.0.2",
     "typescript": "^5.9.3"
   }
